# TweetBook

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
public/: asset-manifest.json  index.html
public/static/css/: main.66975b4b.chunk.css  main.66975b4b.chunk.css.map  main.ce9c69c7.chunk.css  main.ce9c69c7.chunk.css.map
public/static/js/: 2.7ae92f76.chunk.js  2.7ae92f76.chunk.js.map  2.b2e47d88.chunk.js  2.b2e47d88.chunk.js.map  main.5ab9a872.chunk.js  main.5ab9a872.chunk.js.map  main.e9a3645c.chunk.js  main.e9a3645c.chunk.js.map  runtime-main.52ba14f6.js  runtime-main.52ba14f6.js.map  runtime-main.aed996fe.js  runtime-main.aed996fe.js.map
src/: main.rs
src/api/: auth.rs  messages.rs  mod.rs  user.rs
src/models/: init.rs  messages.rs  mod.rs  users.rs
src/utils/: auth.rs  error.rs
