[package]
name = "tweetbook"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.2"
actix-web = "4"
actix-web-lab = "0.18.9"
bcrypt = "0.13.0"
chrono = "0.4.23"
derive_more = "0.99.17"
dotenv = "0.15.0"
futures = "0.3.25"
jsonwebtoken = "8.2.0"
mongodb = "2.3.1"
serde = "1.0.152"
